--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ name: Build GH Pages
 on:
   push:
     branches: ['master']
-    paths: ['build/*.json', 'build/build.php']
+    paths: ['build/*.json', 'build/build.php', 'build/*.txt']
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
